force-app/main/default/objects/ScheduleConflict__c/ScheduleConflict__c.object-meta.xml
<CustomObject>
    <description
  >An overlapping-allocation conflict detected for a resource. Created asynchronously by conflict detection.</description>
    <label>Schedule Conflict</label>
    <nameField>
        <displayFormat>CONF-{0000000}</displayFormat>
        <label>Conflict Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Conflicts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>