force-app/main/default/objects/ScheduleConflict__c/fields/Conflict_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Window_End__c</fullName>
    <description>End of the overlapping date window.</description>
    <label>Conflict Window End</label>
    <type>Date</type>
</CustomField>