force-app/main/default/objects/ScheduleConflict__c/fields/Conflict_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Window_Start__c</fullName>
    <description>Start of the overlapping date window.</description>
    <label>Conflict Window Start</label>
    <type>Date</type>
</CustomField>