force-app/main/default/objects/ScheduleConflict__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource with conflicting allocations.</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Schedule Conflicts</relationshipLabel>
    <relationshipName>Schedule_Conflicts</relationshipName>
    <type>Lookup</type>
</CustomField>