force-app/main/default/objects/ScheduleConflict__c/fields/Total_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation__c</fullName>
    <description>Combined allocation percent across the overlapping window.</description>
    <label>Total Allocation</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>